# scriba

./: .gitignore  CLAUDE.md  README.md  gui.py  pyproject.toml  python  requirements.txt  scriba.py  setup.py  yaml
.github/workflows/: build-and-publish.yml  ci.yml  installer.yml
docs/: DESIGN.md  PLAN.md  WINDOWS-SETUP.md
installer/: install.py
scriba/: app.py  autostart.py  aws_credentials_form.py  config.py  diagnose.py  gui.py  logging_setup.py  messages.py  presigned_url.py  scriba.py  singleinstance.py  windows.py
scriba/audio/: capture.py  wasapi_speech.py
scriba/detect/: arbiter.py  vad.py
scriba/inject/: base.py  windows.py
scriba/stt/: base.py  language.py  streaming.py  whisper_local.py
scriba/text/: casing.py  commands.py  pipeline.py
scriba/ui/: hotkeys.py  tray.py  tray_pin.py
tests/: test_app.py  test_arbiter.py  test_audio_capture.py  test_autostart.py  test_casing.py  test_commands.py  test_config.py  test_cpu_stt_smoke.py  test_diagnose.py  test_hotkeys.py  test_language.py  test_pipeline.py  test_scriba.py  test_streaming.py  test_tray.py  test_tray_pin.py  test_vad_segmentation.py  test_whisper_local.py
